# link2osc

./: .gitignore  .gitmodules  CMakeLists.txt  carabiner.cpp
doc/assets/: carabiner-diagram.md  readme.md
osc/: osc_handler.cpp  osc_handler.h
